# srtla

./: .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  EXTENDED_KEEPALIVE_FIX.md  README.md
.github/: FUNDING.yml  dependabot.yml
.github/actions/compat-build/: action.yml
.github/workflows/: bindings.yml  build-check.yml  compat-matrix.yml  publish-release.yml  static-analysis.yml
bindings/typescript/: README.md  package.json  tsconfig.json
bindings/typescript/src/: deprecation-coverage.test.ts  export-stability.test.ts  index.ts
bindings/typescript/src/receiver/: args.test.ts  args.ts  process.ts  types.ts
bindings/typescript/src/sender/: args.test.ts  args.ts  process.ts  stats-file-arg.test.ts  types.ts
bindings/typescript/src/shared/: exec.ts  ip-list.test.ts  ip-list.ts  process.ts
bindings/typescript/src/telemetry/: args-freeze.test.ts  index.test.ts  index.ts  staleness-boundary.test.ts
dist-local/: srtla_0.0.0-localtest_amd64.deb
dist-pkg/: srtla_2026.6.99_amd64.deb
docs/: COMPATIBILITY.md  EXTENSION_POINTS.md  GAIN-HUNT-PROTOCOL.md  HOW_IT_WORKS.md  NETWORK_SETUP.md  TROUBLESHOOTING.md  connection-info-comparison.md  keepalive-improvements.md
docs/adr/: ADR-001-telemetry-ipc.md  ADR-002-srt-patch-necessity.md  ADR-003-rust-sender-adoption.md
docs/notes/: upstream-currency-2026-06.md
packaging/systemd/: srtla-send.service
src/: common.c  common.h  receiver_config.h  receiver_main.cpp  sd_notify.h  sender.cpp  sender_logic.h  sender_telemetry.h
src/connection/: connection.cpp  connection.h  connection_group.cpp  connection_group.h  connection_registry.cpp  connection_registry.h
src/protocol/: pad_sendto.h  srt_handler.cpp  srt_handler.h  srtla_handler.cpp  srtla_handler.h
src/quality/: load_balancer.cpp  load_balancer.h  metrics_collector.cpp  metrics_collector.h  quality_evaluator.cpp  quality_evaluator.h
src/utils/: auth_rate_limiter.h  nak_dedup.cpp  nak_dedup.h  network_utils.h
tests/: CMakeLists.txt  KNOWN_BUGS.md  handler_harness.h  test_auth_rate_limiter.cpp  test_broadcast_ack.cpp  test_common.cpp  test_extended_keepalive.cpp  test_fake_clock.cpp  test_ghost_group_eviction.cpp  test_group_limits.cpp  test_identity_hooks.cpp  test_load_balancer.cpp  test_nak_dedup.cpp  test_pad_sendto.cpp  test_quality_rtt.cpp  test_reg_race.cpp  test_registration_handshake.cpp  test_sender_bootstrap.cpp  test_srtla_handler_ack.cpp  test_telemetry_emit.cpp  test_timeout_boundaries.cpp  test_timeout_cleanup.cpp
tests/compat/: CAPTURE.md  RUST_SENDER_CUTOVER.md  SMOKE_BASELINE.md  gen-ci-matrix.sh  matrix.yaml  run-matrix.sh  validate-matrix.py
tests/compat/docker/belabox-receiver/: Dockerfile  entrypoint.sh
tests/compat/docker/belabox-sender/: Dockerfile  entrypoint.sh
tests/compat/docker/go-irl/: Dockerfile  entrypoint.sh
tests/compat/docker/go-srtla/: Dockerfile  entrypoint.sh
tests/compat/docker/irlserver-srtla-send/: Dockerfile  entrypoint.sh
tests/compat/docker/openirl-receiver/: Dockerfile  entrypoint.sh
tests/compat/ext-ka-probe/: CMakeLists.txt  main.cpp
tests/compat/fixtures/: .gitignore
tests/compat/fixtures/gain-hunt-golden/: expected.json  gain-fixture.json  regression-fixture.json  reverse-spam-fixture.json  tie-fixture.json
tests/compat/lib/: README.md  build-libsrt-matrix.sh  netem.sh  probe-fec-capability.sh  srt-sink-proxy-fidelity.sh
tests/compat/moblin-mock/: BEHAVIOR.md  Dockerfile  README.md  entrypoint.sh  ip-change-test.sh  moblin_mock.py
tests/compat/pcap-replay/: replay.py  replay.sh
tests/compat/scenarios/: fec-connect-matrix.sh  gain-hunt-analyze-test.sh  gain-hunt-geometry-lint.sh  gain-hunt-matrix.sh  jitter-stress.sh  link-drop-high-rtt.sh  link-drop.sh  profile-validation-matrix.sh  receiver-restart.sh  reorder-stress.sh  sighup-reload.sh  ts-continuity-loopback.sh
tests/compat/srt-sink/: CMakeLists.txt  main.cpp  ts_continuity.h  ts_continuity_test.cpp
tests/golden/: telemetry_empty.json  telemetry_full.json
